gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicemesh
spec:
  gateways:
  - gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /authsvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: authsvc.default.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 2s
    timeout: 5s
  - match:
    - uri:
        prefix: /accountsvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: accountsvc.default.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 2s
    timeout: 5s
  - match:
    - uri:
        prefix: /smssvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: smssvc.default.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 5s
    timeout: 7s
  - match:
    - uri:
        prefix: /aisvc/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: aisvc.default.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 2s
    timeout: 5s
  - match:
    - uri:
        prefix: /accountsvcuat/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: accountsvc.uat.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 2s
    timeout: 5s
  - match:
    - uri:
        prefix: /accountsvcprod/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: accountsvc.prod.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 2s
    timeout: 5s
  - match:
    - uri:
        prefix: '/dotnetmongo/'
    rewrite:
      uri: "/"
    route:
    - destination:
        host: dotnetbooksvc.default.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 4s
    timeout: 12s
  - match:
    - uri:
        prefix: '/dotnetauth/'
    rewrite:
      uri: "/"
    route:
    - destination:
        host: dotnetauthsvc.default.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 4s
    timeout: 12s
  - match:
    - uri:
        prefix: '/scansvc/'
    rewrite:
      uri: "/"
    route:
    - destination:
        host: scansvc.default.svc.cluster.local
